Removed fxFlexFill to fix tablet overlapped  dials

--- a/src/app/petForm/petForm.component.css
+++ b/src/app/petForm/petForm.component.css
@@ -1,5 +1,5 @@
 mat-form-field{
-    width: 400px;
+    width: 90%;
 }
 
 mat-card-title{
